# serializer version: 1
# name: test_valid_type_information[BitmapTypeInformation-demo_bitmap]
  dict({
    'dpcode': 'demo_bitmap',
    'label': list([
      'motor_fault',
    ]),
    'report_type': None,
    'type_data': '{"label": ["motor_fault"]}',
  })
# ---
# name: test_valid_type_information[BooleanTypeInformation-demo_boolean]
  dict({
    'dpcode': 'demo_boolean',
    'report_type': None,
    'type_data': '{}',
  })
# ---
# name: test_valid_type_information[EnumTypeInformation-demo_enum]
  dict({
    'dpcode': 'demo_enum',
    'range': list([
      'scene',
      'customize_scene',
      'colour',
    ]),
    'report_type': None,
    'type_data': '{"range": ["scene", "customize_scene", "colour"]}',
  })
# ---
# name: test_valid_type_information[IntegerTypeInformation-demo_integer]
  dict({
    'dpcode': 'demo_integer',
    'max': 1000,
    'min': 0,
    'report_type': None,
    'scale': 1,
    'step': 1,
    'type_data': '{"unit": "%","min": 0,"max": 1000,"scale": 1,"step": 1}',
    'unit': '%',
  })
# ---
# name: test_valid_type_information[JsonTypeInformation-demo_json]
  dict({
    'dpcode': 'demo_json',
    'report_type': None,
    'type_data': '{}',
  })
# ---
# name: test_valid_type_information[RawTypeInformation-demo_raw]
  dict({
    'dpcode': 'demo_raw',
    'report_type': None,
    'type_data': '{}',
  })
# ---
# name: test_valid_type_information[StringTypeInformation-demo_string]
  dict({
    'dpcode': 'demo_string',
    'report_type': None,
    'type_data': '{}',
  })
# ---
